--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
 
         <tbody>
             <tr>
-                <td>Produto 1</td>
+                <td>Fone de ouvido</td>
                 <td>2</td>
                 <td>5$</td>
                 <td rowspan="2">Sim</td>
             </tr>
 
             <tr>
-                <td>Produto 2</td>
+                <td>Tablet</td>
                 <td>5</td>
                 <td>10$</td>
             </tr>
 
             <tr>
-                <td>Produto 3</td>
+                <td>Celular</td>
                 <td>3</td>
                 <td>15$</td>
                 <td>Não</td>
